app/src/test/resources/programs/valid/variables/basicOperationsOverVariables.exe
foo main() -> Int = {
    let kUniversalConstant: Int = 42;

    let mut a: Int = 5;
    a = a + kUniversalConstant;
    a = a + a;
    a = a + kUniversalConstant;

    a = a - 103;
    a = a - kUniversalConstant;

    a = a * 2;
    a = a * a;

    // a should be 324

    let mut flag: Bool = a > kUniversalConstant;
    flag = not flag;

    // flag should be false

    0
}
