app/src/test/resources/programs/invalid/various/badOperations.exe
foo a() -> Bool = true;
foo b() -> Nope = ();

foo main() -> Int = {
    a() + b()
    5 + true
    !b()
    !5
}